<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >

        <item
            android:id="@+id/nav_active"
            android:icon="@drawable/ic_lock_white_24dp"
            android:title="@string/nav_active" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_password_change"
            android:icon="@drawable/ic_vpn_key_white_24dp"
            android:title="@string/nav_password_change" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_copyright_white_24dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_white_36dp"
            android:title="@string/nav_sign_out" />

    </group>


</menu>