<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="320dp"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/change_pass_title"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/change_pass_content"
        android:textSize="14dp"/>

    <EditText
        android:visibility="gone"
        android:id="@+id/etOldPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_old_pass"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_new_pass"/>

    <EditText
        android:id="@+id/etReNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/hint_renew_pass"/>

    <Button
        android:id="@+id/btOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_primary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/bt_change_pass"
        android:textAllCaps="true"
        android:textColor="@color/white"/>

</LinearLayout>
