<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_first_download"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <ImageButton
            android:id="@+id/btCancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_active"
            android:tint="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/active_title"
                    android:textSize="16dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/active_title_content"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:text="@string/active_text_content"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_code_active"
            android:maxLength="18"
            android:singleLine="true"
            android:textSize="16dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_marginTop="8dp"
            android:id="@+id/llScanQR"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvScanQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorWebLink"
                android:textSize="14dp"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_qr_code"
                android:tint="@color/colorWebLink"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btBuy"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/bt_buy"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btOk"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_primary"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/bt_active"
                android:textAllCaps="true"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
