<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="32dp"
    android:animateLayoutChanges="true"
    android:paddingRight="32dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ahiho.apps.beeenglish.view.MainActivity">



    <Button
        android:id="@+id/btSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_"
        android:text="@string/bt_signup"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16dp"/>

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/ic_person_white_24dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_"
                android:hint="@string/hint_email_or_username"
                android:text="chicken2"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_lock_white_24dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_"
                android:hint="@string/hint_password"
                android:text="p@sswd1"
                android:inputType="textPassword"
                android:scaleType="fitCenter"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_none"
            android:text="@string/bt_signin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btSignInFacebook"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_height="wrap_content"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvForgotPassword"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="14dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llContent"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28dp"/>
</RelativeLayout>
