<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        android:padding="16dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDictionaryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/offline_data"
                android:textColor="@color/white"
                android:textSize="14dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/offline_data_description"
            android:textSize="14dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/bt_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/btOk"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/bt_download"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
