<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_first_download"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        android:padding="16dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:text="@string/first_download"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvFirstDownloadDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/first_download_description"
            android:textSize="14dp"/>

        <LinearLayout
            android:id="@+id/llDownloadProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/pbProgress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:scaleY="2"/>

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="right"
                android:textSize="10dp"/>

            <ProgressBar
                android:id="@+id/pbTotal"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:scaleY="2"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="right"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:id="@+id/llErrorDownload"
            android:visibility="invisible"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_warning_white_24dp"
                android:tint="@color/colorWarning"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/err_download_file"
                android:textColor="@color/colorError"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/bt_cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btOk"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/bt_download"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
